--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.13.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
